--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
     "fancy-log": "^1.3.3",
     "gulp": "^4.0.0",
     "gulp-typescript": "^6.0.0-alpha.1",
+    "live-server": "^1.2.2",
+    "prettier": "^3.2.5",
     "tsify": "^5.0.0",
     "typescript": "^3.9.7",
     "vinyl-source-stream": "^2.0.0",
     "watchify": "^3.11.1",
-    "live-server": "^1.2.2",
-    "prettier": "^3.2.5"
+    "process": "^0.11.10"
   }
 }
