start main menu

--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,6 @@ dist/*
 !dist/hw5_assets/
 
 ### IF YOU ARE MAKING A PROJECT, YOU MAY WANT TO UNCOMMENT THIS LINE ###
-# !dist/assets/
+!dist/assets/
 
 !dist/benchmark1
