--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./dist/main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "gulp & live-server ./dist",
+    "dev": "concurrently \"gulp\"  \"live-server ./dist\"",
     "lint": "eslint .src/**/*.ts"
   },
   "author": "Joe Weaver",
@@ -21,6 +21,7 @@
     "tsify": "^5.0.0",
     "typescript": "^3.9.7",
     "vinyl-source-stream": "^2.0.0",
-    "watchify": "^3.11.1"
+    "watchify": "^3.11.1",
+    "concurrently": "^8.2.2"
   }
 }
