--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "devDependencies": {
     "browserify": "^16.5.1",
+    "concurrently": "^8.2.2",
     "fancy-log": "^1.3.3",
     "gulp": "^4.0.0",
     "gulp-typescript": "^6.0.0-alpha.1",
@@ -21,7 +22,6 @@
     "tsify": "^5.0.0",
     "typescript": "^3.9.7",
     "vinyl-source-stream": "^2.0.0",
-    "watchify": "^3.11.1",
-    "concurrently": "^8.2.2"
+    "watchify": "^3.11.1"
   }
 }
