--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@ node_modules
 # Exclude the compiled project
 dist/*
 
+# Exclude .vscode
+.vscode
+
 # Include the demo_assets folder
 !dist/demo_assets/
 
