--- a/package.json
+++ b/package.json
@@ -2,26 +2,15 @@
   "name": "wolfie2d",
   "version": "1.0.0",
   "description": "A game engine written in TypeScript",
-  "main": "./dist/main.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "concurrently \"gulp\"  \"live-server ./dist\"",
-    "lint": "eslint .src/**/*.ts"
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview"
   },
-  "author": "Joe Weaver",
-  "license": "ISC",
   "devDependencies": {
-    "browserify": "^16.5.1",
-    "concurrently": "^8.2.2",
-    "fancy-log": "^1.3.3",
-    "gulp": "^4.0.0",
-    "gulp-typescript": "^6.0.0-alpha.1",
-    "live-server": "^1.2.2",
-    "prettier": "^3.2.5",
-    "process": "^0.11.10",
-    "tsify": "^5.0.0",
-    "typescript": "^3.9.7",
-    "vinyl-source-stream": "^2.0.0",
-    "watchify": "^3.11.1"
+    "typescript": "^5.2.2",
+    "vite": "^5.2.0",
+    "vite-tsconfig-paths": "^4.3.2"
   }
 }
