--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,14 @@
 {
     "include": [
-        "src/**/*",
-        "src/*"
+        "src"
     ],
     "compilerOptions": {
         "noImplicitAny": true,
-        "target": "es2016"
+        "target": "es2016",
+        "moduleResolution": "node",
+        "baseUrl": ".",
+        "paths": {
+            "@/*": ["src/*"]
+        }
     }
 }
