--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,12 @@
 {
-    "include": [
-        "src"
-    ],
-    "compilerOptions": {
-        "noImplicitAny": true,
-        "target": "es2016",
-        "moduleResolution": "node",
-        "baseUrl": ".",
-        "paths": {
-            "@/*": ["src/*"]
-        }
-    }
+  "include": ["src"],
+  "compilerOptions": {
+    "noImplicitAny": true,
+    "target": "es2016",
+    "moduleResolution": "node",
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/*"]
+    },
+  }
 }
