--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "typescript-eslint": "^7.7.0",
     "vite": "^5.2.0",
     "vite-tsconfig-paths": "^4.3.2"
+  },
+  "dependencies": {
+    "@types/node": "^20.12.7"
   }
 }
