--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "prettier": "^3.2.5",
     "typescript": "^5.4.5",
     "typescript-eslint": "^7.7.0",
-    "vite": "^5.2.0",
-    "vite-tsconfig-paths": "^4.3.2"
+    "vite": "^5.2.0"
   },
   "dependencies": {
     "@types/node": "^20.12.7"
