--- a/package.json
+++ b/package.json
@@ -12,13 +12,12 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.0.0",
+    "@types/node": "^20.12.7",
     "eslint": "^8.57.0",
     "prettier": "^3.2.5",
     "typescript": "^5.4.5",
     "typescript-eslint": "^7.7.0",
-    "vite": "^5.2.0"
-  },
-  "dependencies": {
-    "@types/node": "^20.12.7"
+    "vite": "^5.2.0",
+    "vite-plugin-static-copy": "^1.0.3"
   }
 }
